--- a/index.html
+++ b/index.html
@@ -1301,7 +1301,7 @@ h1{font-size:18px;font-weight:700;margin:0;flex:1;text-align:center;color:var(--
 .choice-label { font-weight:500; color: var(--text-sec); min-width:140px; display:flex; align-items:flex-start; gap:8px; flex-direction:column; }
 .choice-label-row { display:flex; align-items:center; gap:8px; }
 .choice-row { flex-direction:column; align-items:flex-start; gap:12px; }
-.mobile-cover-state { color: #fff; font-size: 13px; font-weight: 800; letter-spacing: 0.2px; background: rgba(255,255,255,0.06); border-radius: 8px; padding: 6px 10px; box-shadow: inset 0 0 0 1px rgba(255,255,255,0.08); }
+.mobile-cover-state { color: var(--text-main); font-size: 12px; font-weight: 800; letter-spacing: 0.1px; padding-left: 26px; line-height: 1.35; }
 
 .tariff-summary {
     margin: 30px 0 50px;
