--- a/index.html
+++ b/index.html
@@ -1213,11 +1213,11 @@ h1{font-size:18px;font-weight:700;margin:0;flex:1;text-align:center;color:var(--
 .tariff-features { list-style:none; padding:0; margin:0 0 24px; flex-grow:1; text-align:left; }
 
 /* rows */
-.tariff-feature-item { display:grid; grid-template-columns: auto 1fr auto; align-items:flex-start; column-gap:12px; row-gap:8px; margin-bottom:12px; font-size:14px; color: var(--text-sec); line-height:1.5; user-select:text; text-align:left; }
+.tariff-feature-item { display:grid; grid-template-columns: auto 1fr auto; align-items:center; column-gap:12px; row-gap:10px; margin-bottom:12px; font-size:14px; color: var(--text-sec); line-height:1.5; user-select:text; text-align:left; }
 .tariff-feature-item.excluded { opacity:0.5; text-decoration: line-through; }
 .tariff-feature-item.excluded .qty-control { opacity:0.5; pointer-events:none; }
-.item-left { display:grid; grid-template-columns: auto 1fr; align-items:flex-start; gap:10px; flex-grow:1; grid-column: 1 / 3; }
-.item-left > span { display:inline-flex; align-items:center; gap:6px; }
+.item-left { display:grid; grid-template-columns: auto 1fr; align-items:center; gap:12px; flex-grow:1; grid-column: 1 / 3; }
+.item-left > span { display:inline-flex; align-items:center; gap:8px; line-height:1.45; }
 
 /* Minimal checkbox (smaller) */
 .feature-checkbox { appearance:none; width:16px; height:16px; border:1px solid rgba(255,255,255,0.18); border-radius:5px; background:rgba(255,255,255,0.02); cursor:pointer; position:relative; transition:.18s ease; flex-shrink:0; box-shadow: inset 0 0 0 1px rgba(255,255,255,0.04); }
@@ -1245,7 +1245,7 @@ h1{font-size:18px;font-weight:700;margin:0;flex:1;text-align:center;color:var(--
 .addon-list.open { display:block; }
 
 /* tooltip icon */
-.info-icon { display:inline-flex; align-items:center; justify-content:center; width:16px; height:16px; border: 1px solid rgba(255,255,255,0.18); border-radius:50%; color: rgba(255,255,255,0.6); font-size:10px; margin-left:8px; cursor:help; flex-shrink:0; position: relative; vertical-align: middle; transform: translateY(-1px); line-height:1; }
+.info-icon { display:inline-flex; align-items:center; justify-content:center; width:16px; height:16px; border: 1px solid rgba(255,255,255,0.18); border-radius:50%; color: rgba(255,255,255,0.6); font-size:10px; margin-left:8px; cursor:help; flex-shrink:0; position: relative; vertical-align: middle; line-height:1; }
 .info-icon:hover { border-color: rgba(255,255,255,0.8); color:#fff; }
 .info-icon::after { display: none; }
 .tariffs-grid > :nth-child(3) .tariff-name .info-icon { border-color: rgba(0,0,0,0.30); color: rgba(0,0,0,0.65); }
@@ -1300,7 +1300,9 @@ h1{font-size:18px;font-weight:700;margin:0;flex:1;text-align:center;color:var(--
 .choice-pill:hover .cover-icon.static { box-shadow: inset 0 0 0 1px rgba(255,255,255,0.22); }
 .choice-label { font-weight:500; color: var(--text-sec); min-width:140px; display:flex; align-items:flex-start; gap:8px; flex-direction:column; }
 .choice-label-row { display:flex; align-items:center; gap:8px; }
+.tariff-feature-item.choice-row { align-items:flex-start; }
 .choice-row { flex-direction:column; align-items:flex-start; gap:12px; }
+.choice-row .item-left { align-items:flex-start; }
 .mobile-cover-state { color: var(--text-main); font-size: 12px; font-weight: 800; letter-spacing: 0.1px; padding-left: 31px; line-height: 1.35; margin-top: -8px; display: flex; align-items: center; }
 
 .tariff-summary {
