--- a/index.html
+++ b/index.html
@@ -1506,6 +1506,8 @@ h1{font-size:18px;font-weight:700;margin:0;flex:1;text-align:center;color:var(--
 }
 .order-text-block { margin: 12px 0 16px; display:flex; flex-direction:column; gap:10px; }
 .order-textarea { width:100%; min-width:100%; max-width:100%; height:140px; background:#111; color:#fff; border:1px solid #333; padding:12px; border-radius:10px; resize:vertical; box-sizing:border-box; font-family: inherit; }
+.order-reset-btn { align-self:flex-start; background: rgba(255,255,255,0.07); border:1px solid var(--border); color:#fff; padding:8px 12px; border-radius:10px; font-weight:700; cursor:pointer; transition:0.2s; display:inline-flex; gap:8px; align-items:center; }
+.order-reset-btn:hover { background: rgba(255,255,255,0.14); }
 .order-actions-row { display:flex; flex-wrap:wrap; gap:10px; }
 .order-send-btn { border:none; border-radius:10px; padding:10px 14px; font-weight:700; cursor:pointer; display:inline-flex; gap:8px; align-items:center; transition:0.2s; }
 .order-send-btn.vk { background: var(--vk); color:#fff; }
@@ -3635,6 +3637,10 @@ a.profile-meta { display: flex; align-items: center; justify-content: center; ga
 
         <div class="order-text-block">
             <p style="margin:0; color: var(--text-sec); font-size:13px;">Состав заявки и итог сразу готовы к отправке</p>
+            <button class="order-reset-btn" type="button" onclick="clearOrderSelection()">
+                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M3 6h6m6 0h6M9 6a3 3 0 0 1 6 0m-9 0 1 14h10l1-14"/><path d="m10 11 4 4m0-4-4 4"/></svg>
+                Очистить выбор
+            </button>
             <textarea id="order-text-area" class="order-textarea" readonly></textarea>
         </div>
 
@@ -3732,7 +3738,8 @@ function matchesSearch(p, query) {
   if (!query) return true;
   const normalized = query.toLowerCase();
   if (!p.searchField) p.searchField = buildSearchField(p);
-  return p.searchField.includes(normalized);
+  const pattern = new RegExp(`(^|[^\\p{L}\\d])${escapeRegExp(normalized)}([^\\p{L}\\d]|$)`, 'iu');
+  return pattern.test(p.searchField);
 }
 
 function getMatchSnippet(p) {
@@ -3741,27 +3748,28 @@ function getMatchSnippet(p) {
   if (!source) return '';
   const normalized = searchQuery.toLowerCase();
   const lower = source.toLowerCase();
-  const idx = lower.indexOf(normalized);
-  if (idx === -1) return '';
-  const start = Math.max(0, idx - 30);
-  const end = Math.min(source.length, idx + normalized.length + 30);
+  const pattern = new RegExp(`(^|[^\\p{L}\\d])${escapeRegExp(normalized)}([^\\p{L}\\d]|$)`, 'iu');
+  const match = lower.match(pattern);
+  if (!match) return '';
+  const matchIndex = (match.index || 0) + (match[1] ? match[1].length : 0);
+  const start = Math.max(0, matchIndex - 30);
+  const end = Math.min(source.length, matchIndex + normalized.length + 30);
   const snippet = source.slice(start, end);
   const safe = snippet.replace(/</g, '&lt;').replace(/>/g, '&gt;');
-  const reg = new RegExp(escapeRegExp(searchQuery), 'ig');
-  return safe.replace(reg, '<mark>$&</mark>');
+  const reg = new RegExp(`(^|[^\\p{L}\\d])(${escapeRegExp(searchQuery)})($|[^\\p{L}\\d])`, 'giu');
+  return safe.replace(reg, (_, p1, p2, p3) => `${p1}<mark>${p2}</mark>${p3}`);
 }
 
-function persistSearchQuery(value) {
-  try {
-    if (value) localStorage.setItem(SEARCH_KEY, value);
-    else localStorage.removeItem(SEARCH_KEY);
-  } catch(e) {}
+function persistSearchQuery() {
+  try { localStorage.removeItem(SEARCH_KEY); } catch(e) {}
 }
 
 function restoreSearchQuery() {
   try {
-    return localStorage.getItem(SEARCH_KEY) || '';
-  } catch(e) { return ''; }
+    const saved = localStorage.getItem(SEARCH_KEY);
+    if (saved) localStorage.removeItem(SEARCH_KEY);
+  } catch(e) {}
+  return '';
 }
 
 function toggleSearchBar(visible) {
@@ -3781,8 +3789,9 @@ function handleSearchChange(value) {
 function initPortfolioSearch() {
   searchInput = document.getElementById('portfolio-search');
   if (!searchInput) return;
-  const saved = restoreSearchQuery();
-  if (saved) { searchQuery = saved; searchInput.value = saved; }
+  restoreSearchQuery();
+  searchQuery = '';
+  searchInput.value = '';
   const debounced = debounce(v => handleSearchChange(v), 250);
   searchInput.addEventListener('input', (e) => debounced(e.target.value));
   searchInput.addEventListener('keydown', (e) => { if (e.key === 'Escape') clearPortfolioSearch(); });
@@ -6359,6 +6368,12 @@ function resetTariffSelections(){
     applyTariffStateSnapshot(tariffDefaults);
     primeOrderPreview(true);
   }
+}
+
+function clearOrderSelection(){
+  resetTariffSelections();
+  const modal = document.getElementById('order-modal');
+  if(modal) modal.scrollTop = 0;
 }
 
 function getShareableLink(snapshot){
