--- a/index.html
+++ b/index.html
@@ -1282,7 +1282,7 @@ h1{font-size:18px;font-weight:700;margin:0;flex:1;text-align:center;color:var(--
 .section-title { font-size:32px; font-weight:800; margin:0 0 10px; color:#fff; }
 .section-subtitle { color: var(--text-sec); margin:0; font-size:16px; }
 
-.tariffs-grid { display:grid; grid-template-columns: repeat(auto-fit, minmax(380px, 1fr)); gap:30px; max-width:1340px; margin:0 auto 80px; padding:0 20px; align-items:flex-start; }
+.tariffs-grid { display:grid; grid-template-columns: repeat(auto-fit, minmax(340px, 1fr)); gap:30px; max-width:1200px; margin:0 auto 80px; padding:0 20px; align-items:flex-start; }
 
 .tariff-wrapper { display:flex; flex-direction:column; gap:30px; }
 .tariff-card { background:#1f1f21; border:1px solid rgba(255,255,255,0.05); border-radius:24px; padding:40px 30px; display:flex; flex-direction:column; transition:.3s; text-align:left; }
@@ -1307,8 +1307,8 @@ h1{font-size:18px;font-weight:700;margin:0;flex:1;text-align:center;color:var(--
 .tariff-feature-item { display:grid; grid-template-columns: auto 1fr auto; align-items:center; column-gap:12px; row-gap:10px; margin-bottom:12px; font-size:14px; color: var(--text-sec); line-height:1.5; user-select:text; text-align:left; }
 .tariff-feature-item.excluded { opacity:0.5; text-decoration: line-through; }
 .tariff-feature-item.excluded .qty-control { opacity:0.5; pointer-events:none; }
-.item-left { display:grid; grid-template-columns: auto 1fr; align-items:center; gap:12px; flex-grow:1; grid-column: 1 / 3; }
-.item-left > span { display:inline-flex; align-items:center; gap:8px; line-height:1.45; }
+.item-left { display:grid; grid-template-columns: auto 1fr; align-items:flex-start; gap:12px; flex-grow:1; grid-column: 1 / 3; }
+.item-left > span { display:inline-flex; align-items:flex-start; gap:6px; line-height:1.45; }
 
 /* Minimal checkbox (smaller) */
 .feature-checkbox { appearance:none; width:16px; height:16px; border:1px solid rgba(255,255,255,0.18); border-radius:5px; background:rgba(255,255,255,0.02); cursor:pointer; position:relative; transition:.18s ease; flex-shrink:0; box-shadow: inset 0 0 0 1px rgba(255,255,255,0.04); }
@@ -1336,7 +1336,7 @@ h1{font-size:18px;font-weight:700;margin:0;flex:1;text-align:center;color:var(--
 .addon-list.open { display:block; }
 
 /* tooltip icon */
-.info-icon { display:inline-flex; align-items:center; justify-content:center; width:16px; height:16px; border: 1px solid rgba(255,255,255,0.18); border-radius:50%; color: rgba(255,255,255,0.6); font-size:10px; margin-left:8px; cursor:help; flex-shrink:0; position: relative; vertical-align: middle; line-height:1; }
+.info-icon { display:inline-flex; align-items:center; justify-content:center; width:16px; height:16px; border: 1px solid rgba(255,255,255,0.18); border-radius:50%; color: rgba(255,255,255,0.6); font-size:10px; margin-left:6px; cursor:help; flex-shrink:0; position: relative; vertical-align: middle; line-height:1; }
 .info-icon:hover { border-color: rgba(255,255,255,0.8); color:#fff; }
 .info-icon::after { display: none; }
 .tariffs-grid > :nth-child(3) .tariff-name .info-icon { border-color: rgba(0,0,0,0.30); color: rgba(0,0,0,0.65); }
